Fixed layout issue

--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -6,6 +6,8 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
+  max-width: 100vw;
 
   h1 {
     text-align: center;
